--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.2.3
 Django==3.0
 django-elasticsearch-dsl==7.1.0
+django-elasticsearch-dsl-drf==0.20.3
+django-nine==0.2.2
 djangorestframework==3.11.0
 elasticsearch==7.1.0
 elasticsearch-dsl==7.1.0
